# ARoS_ROS_interface_DEPS

./: README.md
AmtecLWArm/: .gitignore  CMakeLists.txt
AmtecLWArm/Arm/: ArmMovements.cpp  ArmMovements.h  ArmMovements_ARoS.cpp  ArmMovements_ARoS.h  ArmMovements_Dumbo.cpp  ArmMovements_Dumbo.h  ArmMovements_Jumbo.cpp  ArmMovements_Jumbo.h  WrapperAmtecArm.cpp  WrapperAmtecArm.h
AmtecLWArm/Communications/: YarpCommunicationServerAmtecLWArm.cpp  YarpCommunicationServerAmtecLWArm.h
AmtecLWArm/Core/: AmtecLWArm.cpp  ConsoleManagement.cpp  ConsoleManagement.h  StdAfx.cpp  StdAfx.h
AmtecLWArm/config/: amtec_aros_gripper_left.ini  amtec_aros_gripper_right.ini  amtec_aros_no_gripper_right.ini  amtec_dumbo_gripper.ini  amtec_jumbo_gripper.ini
Hardware/YARP_Modules/amtec_lwa_7dof/: AmtecLWA7dof.cpp  AmtecLWA7dof.h  Amtec_Definitions.h  CMakeLists.txt
Hardware/YARP_Modules/amtec_lwa_7dof/Init_Files/: LWAFTS5_Schunk_Spain_Robot2.ini  LWAFTS5_Schunk_Spain_Robot2_2arms.ini  LWAFTS5_Schunk_Spain_Robot2_left.ini  LWAFTS6_Schunk_Spain_Robot2.ini
Hardware/YARP_Modules/amtec_lwa_7dof/common/: m5apiw32.h
Hardware/YARP_Modules/barrett_hand_826X/: CMakeLists.txt  barrett_hand_826X.cpp  barrett_hand_826X.h  barrett_hand_definitions.h
Hardware/YARP_Modules/barrett_hand_826X/serial_asio/: CMakeLists.txt  serial_asio.cpp  serial_asio.h
Hardware/YARP_Modules/pantilt_ptud46/: CMakeLists.txt  pantilt_definitions.h  pantilt_ptud46.cpp  pantilt_ptud46.h
Hardware/YARP_Wrappers/Amtec_PStepServer/: Amtec_PStepServerConfig.cmake  CMakeLists.txt
Hardware/YARP_Wrappers/Amtec_PStepServer/include/: AmtecPStepServer.h
Hardware/YARP_Wrappers/Amtec_PStepServer/src/: AmtecPStepServer.cpp
PHRI/: ArmThread.cpp  ArmThread.h  ArosArm.cpp  ArosArm.h  CMakeLists.txt  ModuleThread.cpp  ModuleThread.h  PHRI.cpp  PHRI.h  PHRI.rc  PHRIDlg.cpp  PHRIDlg.h  README.txt  Task description.txt  YarpCommPHRI.cpp  YarpCommPHRI.h  stdafx.cpp
PHRI/res/: PHRI.APS  PHRI.rc  PHRI.rc2  Thumbs.db  resource.h
Pantilt/: CMakeLists.txt  PanTilt.cpp  PanTiltWrapper_defs.h  StdAfx.cpp  YarpCommunicationServerPanTilt.cpp  YarpCommunicationServerPanTilt.h  pantilt.ini
Pantilt/config/: pantilt.ini
VisionBot/: .gitignore  CMakeLists.txt  README.txt  README_cmake.txt  README_usage.txt
VisionBot/Calibration_Files/: Coordinate_Compensation_(Videre_STOC).xlsx
VisionBot/Calibration_Files/.svn/: all-wcprops  entries
VisionBot/Comms/: YarpCommVisionBot.cpp  YarpCommVisionBot.h
VisionBot/Comms/.svn/: all-wcprops  entries
VisionBot/Comms/.svn/text-base/: YarpCommVisionBot.cpp.svn-base
VisionBot/Config/: AppConfig.ini
VisionBot/Config/.svn/: all-wcprops  entries
VisionBot/Config/Parameters/.svn/: all-wcprops  entries
VisionBot/Config/Segmentation/.svn/: all-wcprops  entries
VisionBot/Config/Segmentation/AVT/: Segmentation_Parameters_(Construction_Task_Full).ini
VisionBot/Config/Segmentation/Videre/: Segmentation_Parameters (Colour Learning) (Fruits, Books).ini  Segmentation_Parameters (Colour Learning).ini  Segmentation_Parameters (Construction Task Full Offline testing).ini  Segmentation_Parameters (Construction Task).ini  Segmentation_Parameters (Differential Kinematics).ini  Segmentation_Parameters (Piano_nanoPAD2).ini  Segmentation_Parameters (Toy Robot Learning).ini  Segmentation_Parameters (ToyAssembling_control).ini  Segmentation_Parameters (ToyAssembling_control_target).ini  Segmentation_Parameters (ToyAssembling_control_target_1).ini  Segmentation_Parameters (ToyAssembling_control_target_2).ini  Segmentation_Parameters (ToyAssembling_control_target_3).ini  Segmentation_Parameters (White Detection).ini  Segmentation_Parameters_(ComputerAssembly_Task).ini  Segmentation_luis.ini  test.ini
VisionBot/Config/Video/: Video_Parameters_Videre_STH-DCS-VAR-C_(Colour_Learning).ini  Video_Parameters_Videre_STH-DCS-VAR-C_(ToyAssembling_control).ini
VisionBot/Config/Video/.svn/: all-wcprops  entries
VisionBot/Core/: ProcessThread.h  StdAfx.h  VisionBot.h
VisionBot/Core/.svn/: all-wcprops  entries
VisionBot/Core/.svn/text-base/: ProcessThread.cpp.svn-base  StdAfx.cpp.svn-base  VisionBot.cpp.svn-base
VisionBot/DataStructures/: Data.h  DataDefinitions.h  ObjectDefinitions.h  ObjectMH.cpp  ObjectMH.h  ObjectTracker.cpp  ObjectTracker.h  Object_T.h  PanTiltData.cpp
VisionBot/DataStructures/.svn/: all-wcprops  entries
VisionBot/DataStructures/.svn/text-base/: Data.cpp.svn-base  HumanInfo.cpp.svn-base  HumanInfo.h.svn-base  Object_T.h.svn-base  PanTiltData.h.svn-base
VisionBot/Deploy/: Deployment Info.txt
VisionBot/Deploy/.svn/: all-wcprops  entries
VisionBot/Deploy/.svn/text-base/: Deploy.bat.svn-base
VisionBot/Dialogs/: AboutDlg.cpp  AboutDlg.h  DialogConnection.cpp  DialogGestureParameters.cpp  DialogGestureParameters.h  DialogHumanInfo.cpp  DialogHumanInfo.h  DialogInfo.h  DialogInfoARoS.cpp  DialogInfoARoS.h  DialogPanTilt.cpp  DialogPanTilt.h  DialogSegmentation.h  DialogUtils.cpp  DialogVideoParameters.h  DialogYARPPortConfig.cpp  DialogYARPPortConfig.h  Timers.h  VisionBotDlg.cpp
VisionBot/Dialogs/.svn/: all-wcprops  entries
VisionBot/Dialogs/.svn/text-base/: DialogConnection.h.svn-base  (+5 more)
VisionBot/ImageProcessing/: AllProcessImage.h  ProcessImage.cpp  ProcessImage.h  ProcessImageColourLearning.cpp  ProcessImageComputerAssembly.cpp  ProcessImageComputerAssembly.h  ProcessImageDiffKin.h  ProcessImageDrinking.cpp  ProcessImageDrinking.h  ProcessImageFaceTracking.cpp  ProcessImageFaceTracking.h  ProcessImageHRTransport.cpp  ProcessImageHRTransport.h  ProcessImageTest.cpp  ProcessImageTest.h  ProcessImageToyRobotFull_AVT.cpp  ProcessImageToyRobotFull_SVS.cpp  ProcessImageToyRobotFull_SVS.h  ProcessImageToyRobotLearning.cpp  ProcessImageToyRobotLearning.h
VisionBot/ImageProcessing/.svn/: all-wcprops  dir-prop-base  entries
VisionBot/OpenCV/.svn/: all-wcprops  entries
VisionBot/Stereo/: StereoProcessARoS.cpp  StereoProcessDumbo.h
VisionBot/Stereo/.svn/: all-wcprops  entries
VisionBot/res/: VisionBot.aps  VisionBot.rc2
VisionBot/res/.svn/: all-wcprops  dir-prop-base  entries
(+304 files in other folders)
